Testing sample