@@ -12,22 +12,29 @@
     <description>Camunda 8 Samples</description>
 
     <modules>
-        <module>service-orchestration</module>
+        <module>java</module>
     </modules>
 
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+        <java.version>21</java.version>
+        <maven-compiler.version>3.11.0</maven-compiler.version>
+        <maven-surefire.version>3.2.2</maven-surefire.version>
+<!--        <maven-dependency-check.version>9.0.2</maven-dependency-check.version>-->
         <camunda.version>8.3.1</camunda.version>
+        <sl4j.verion>2.0.9</sl4j.verion>
         <junit.version>5.10.1</junit.version>
         <hamcrest.version>2.2</hamcrest.version>
+        <mockito.version>5.7.0</mockito.version>
     </properties>
 
     <dependencies>
-<!--        <dependency>-->
-<!--            <groupId>io.camunda.spring</groupId>-->
-<!--            <artifactId>spring-boot-starter-camunda</artifactId>-->
-<!--            <version>${camunda.version}</version>-->
-<!--        </dependency>-->
+        <dependency>
+            <groupId>org.slf4j</groupId>
+            <artifactId>slf4j-simple</artifactId>
+            <version>${sl4j.verion}</version>
+            <scope>test</scope>
+        </dependency>
         <dependency>
             <groupId>org.junit.jupiter</groupId>
             <artifactId>junit-jupiter</artifactId>
@@ -40,7 +47,12 @@
             <version>${hamcrest.version}</version>
             <scope>test</scope>
         </dependency>
-
+        <dependency>
+            <groupId>org.mockito</groupId>
+            <artifactId>mockito-core</artifactId>
+            <version>${mockito.version}</version>
+            <scope>test</scope>
+        </dependency>
     </dependencies>
 
     <build>
@@ -48,12 +60,37 @@
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-compiler-plugin</artifactId>
-                <version>3.11.0</version>
+                <version>${maven-compiler.version}</version>
                 <configuration>
-                    <release>21</release>
+                    <release>${java.version}</release>
                     <compilerArgs>--enable-preview</compilerArgs>
                 </configuration>
             </plugin>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-surefire-plugin</artifactId>
+                <version>${maven-surefire.version}</version>
+                <configuration>
+                    <argLine>--enable-preview</argLine>
+                </configuration>
+            </plugin>
+            <!--
+            <plugin>
+                <groupId>org.owasp</groupId>
+                <artifactId>dependency-check-maven</artifactId>
+                <version>${maven-dependency-check.version}</version>
+                <configuration>
+                    <nvdApiKey>4d424cae-8bea-4cd1-97e9-0698934da5c0</nvdApiKey>
+                </configuration>
+                <executions>
+                    <execution>
+                        <goals>
+                            <goal>check</goal>
+                        </goals>
+                    </execution>
+                </executions>
+            </plugin>
+            -->
         </plugins>
     </build>
 </project>
